data/issues_nolabel/nolabel_test_11693.txt
Tensorflow error while building using gpu

ERROR: /home/overlord/.cache/bazel/_bazel_overlord/38c05a5232666f398e07b83e8b030232/external/lmdb/BUILD.bazel:8:1: C++ compilation of rule '@lmdb//:lmdb' failed: crosstool_wrapper_driver_is_not_gcc failed: error executing command external/local_config_cuda/crosstool/clang/bin/crosstool_wrapper_driver_is_not_gcc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -fPIE -Wall -Wunused-but-set-parameter ... (remaining 33 argument(s) skipped): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
external/lmdb/midl.c: In function 'MDB_ID* mdb_midl_alloc(int)':
external/lmdb/midl.c:105:47: error: invalid conversion from 'void*' to 'MDB_IDL {aka long unsigned int*}' [-fpermissive]
MDB_IDL ids = malloc((num+2) * sizeof(MDB_ID));
^
external/lmdb/midl.c: In function 'void mdb_midl_shrink(MDB_ID**)':
external/lmdb/midl.c:123:58: error: invalid conversion from 'void*' to 'MDB_IDL {aka long unsigned int*}' [-fpermissive]
(ids = realloc(ids, (MDB_IDL_UM_MAX+2) * sizeof(MDB_ID))))
^
external/lmdb/midl.c: In function 'int mdb_midl_grow(MDB_ID**, int)':
external/lmdb/midl.c:134:54: error: invalid conversion from 'void*' to 'MDB_IDL {aka long unsigned int*}' [-fpermissive]
idn = realloc(idn, (idn + num + 2) * sizeof(MDB_ID));
^
external/lmdb/midl.c: In function 'int mdb_midl_need(MDB_ID*, unsigned int)':
external/lmdb/midl.c:148:50: error: invalid conversion from 'void*' to 'MDB_IDL {aka long unsigned int*}' [-fpermissive]
if (!(ids = realloc(ids-1, num * sizeof(MDB_ID))))
^
Target //tensorflow/tools/pip_package:build_pip_package failed to build
Use --verbose_failures to see the command lines of failed build steps.